--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/luxon": "^3.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
